# TriageIQ-SOC

./: .gitignore  Dockerfile  README.md  TriageIQ_Demo.pptx  pyproject.toml  sample_upload.json  start.sh
dashboard/: README.md  backend.py  publisher.py  requirements.txt
dashboard/static/: index.html
data/: abuseipdb_cache.json  alerts.json  attack_map.json  known_bad.txt  wazuh_alerts.json
docs/: AI_USAGE.md
triageiq/: __init__.py  __main__.py  convert.py  engine.py  enrich.py  models.py  output.py
