[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "triageiq"
version = "0.1.0"
description = "SOC alert enrichment and triage engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
convert = [
    "datasets>=2.0",
]

[project.scripts]
triageiq = "triageiq.__main__:main"
triageiq-convert = "triageiq.convert:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["triageiq*"]
